# Surrogate-guided-MOBO-for-PHB-production

./: README.md  environment.yml  pyproject.toml
configs/: active_learning.yaml  blocked_subsystem_rollup.yaml.example  candidate_reactions.yaml  conditions.yaml  model_config.yaml
models/: model_with_PHA.xml  surrogate_xgboost__biomass_flux.joblib  surrogate_xgboost__pha_flux.joblib
pyfiles/: 01_extend_model.py  02b_validate_gem_extended.py  03_generate_design_space.py  04_run_fba_dataset.py  05_train_surrogate.py  06_run_active_learning_option_c.py  07_run_al_multiseed.py  08_aggregate_al_runs.py  08_shap_analysis_publication_grade.py  08b_summarize_al_benchmarks.py  09_hyperparameter_sensitivity.py  10_statistical_significance.py  11_phase_plane_analysis.py  12_dataset_statistics_and_learning_curves.py  RUN_ALL_IMPROVEMENTS.py  active_learning.yaml  candidate_reactions.yaml  conditions.yaml  model_config.yaml
scripts/: 00b_check_blocked_reactions.py  00c_export_blocked_by_subsystem.py  02_validate_model.py  02b_validate_gem_extended.py  02c_carbon_source_fba_validation.py  05b_compare_surrogates.py  06_run_active_learning_option_c.py  07_run_al_multiseed.py  08_shap_analysis_publication_grade.py  08b_summarize_al_benchmarks.py  09_hyperparameter_sensitivity.py  10_statistical_significance.py  11_phase_plane_analysis.py  12_dataset_statistics_and_learning_curves.py  RUN_ALL_IMPROVEMENTS.py  export_benchmark_significance_table.py  export_candidate_reactions_gpr.py  export_candidate_wt_fluxes.py  export_condition_phb_wt_design_mean_eps030.py  optknock_comparison.py  (+6 more)
(+19 files in other folders)
